Antelops web version 2.0.1

--- a/index_es.html
+++ b/index_es.html
@@ -255,7 +255,7 @@
                                                 <em>
                                                     <font color="#f0c832">Multicloud y Centros de Datos convergentes:</font>
                                                 </em>
-                                                En un entorno competitivo y en continua evolución, se necesita un partner con conocimientos profundos en una gran variedad de opciones cloud, públicas, privadas e híbridas. Somos expertos enAmazon Web Services (AWS), Windows Azure, Google Cloud Platform, Openstack, VMware y Nutanix.</p>
+                                                En un entorno competitivo y en continua evolución, se necesita un partner con conocimientos profundos en una gran variedad de opciones cloud, públicas, privadas e híbridas. Somos expertos en Amazon Web Services (AWS), Windows Azure, Google Cloud Platform, Openstack, VMware y Nutanix.</p>
 
                                                 <div id="sliderFrame1">
                                                     <div id="slider1">
@@ -273,7 +273,7 @@
                                                     <em>
                                                         <font color="#f0c832">Herramientas DevOps:</font>
                                                     </em>
-                                                    Los movernos entornos híbridos cloud y las prácticas de desarrollo y operación lean/agile requieren el uso de nuevas herramientas. Usamos e integramos Puppet, Docker, Vagrant, Chef y Ansible en su entorno.</p>
+                                                    Los modernos entornos híbridos cloud y las prácticas de desarrollo y operación lean/agile requieren del uso de nuevas herramientas. Integramos Puppet, Docker, Vagrant, Chef y Ansible en su entorno.</p>
 
                                                     <div id="sliderFrame2">
                                                         <div id="slider2">
